<resources>
    <string name="app_name">Event App</string>
    <string name="finish">Finish</string>
    <string name="active">Active</string>
    <string name="home">Home</string>
    <string name="finished_events">Finished Events</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="error_message">Error message</string>
    <string name="upcoming">Upcoming</string>
    <string name="finished">Finished</string>
    <string name="event_image">Event Image</string>
    <string name="time">Time: %1$s - %2$s</string>
    <string name="quota">Quota:</string>
    <string name="description">Description:</string>
    <string name="event_link">Event Link</string>
    <string name="event_detail">Event Detail</string>
    <string name="favorite">Favorite</string>
    <string name="favorite_events">Favorite Events</string>
    <string name="event_details">Event Details</string>
    <string name="quota_estimation">Quota: %1$d</string>
    <string name="toggle_theme">Toggle Theme</string>
    <string name="settings">Settings</string>
    <string name="toggle_notification">Toggle Notification</string>
    <string name="theme_switch">Theme Switch</string>
    <string name="notification_switch">Notification Switch</string>
    <string name="nav_host_fragment">Navigation Host Fragment</string>
    <string name="bottom_navigation">Bottom Navigation</string>
    <string name="event_name">Event Name</string>
    <string name="loading">Loading</string>
    <string name="search_events">Search events…</string>
    <string name="event_owner">Event Owner: %1$s</string>
</resources>