<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_active_events"
        android:icon="@drawable/ic_event"
        android:title="@string/upcoming" />
    <item
        android:id="@+id/nav_finished_events"
        android:icon="@drawable/ic_done"
        android:title="@string/finished" />
    <item
        android:id="@+id/nav_favorite_events"
        android:icon="@drawable/ic_favorite_filled"
        android:title="@string/favorite" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />
</menu>