<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <ImageView
        android:id="@+id/iv_event_image"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/event_image"
        android:scaleType="centerCrop"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/tv_event_name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_event_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/event_name"
        android:textSize="16sp"
        app:layout_constraintLeft_toRightOf="@id/iv_event_image"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_event_owner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/event_owner"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="@+id/tv_event_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_event_name" />

    <TextView
        android:id="@+id/tv_event_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/time"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="@+id/tv_event_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_event_owner" />
</androidx.constraintlayout.widget.ConstraintLayout>
