<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.SettingsFragment"

    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:contentDescription="@string/settings"
            android:theme="@style/ThemeOverlay.MaterialComponents.ActionBar"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/settings"
            app:titleTextColor="?android:textColorPrimary" />

        <TextView
            android:id="@+id/toggle_theme_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/toggle_theme"
            android:paddingBottom="16dp"
            android:text="@string/toggle_theme"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/theme_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/theme_switch"
            android:paddingBottom="16dp"
            app:layout_constraintBottom_toBottomOf="@id/toggle_theme_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.304"
            app:layout_constraintStart_toEndOf="@id/toggle_theme_text"
            app:layout_constraintTop_toTopOf="@id/toggle_theme_text"
            app:layout_constraintVertical_bias="0.384" />

        <TextView
            android:id="@+id/toggle_notification_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/toggle_notification"
            android:paddingBottom="16dp"
            android:text="@string/toggle_notification"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/theme_switch" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/notification_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/notification_switch"
            android:paddingBottom="16dp"
            app:layout_constraintBottom_toBottomOf="@id/toggle_notification_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.193"
            app:layout_constraintStart_toEndOf="@id/toggle_notification_text"
            app:layout_constraintTop_toTopOf="@id/toggle_notification_text"
            app:layout_constraintVertical_bias="0.307" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
